treeview item overflow hidden loading img fix

--- a/assets/3dviewer-assets/website/o3dv/css/treeview.css
+++ b/assets/3dviewer-assets/website/o3dv/css/treeview.css
@@ -5,7 +5,7 @@ div.ov_tree_view
 
 div.ov_tree_view div.ov_tree_item
 {
-	overflow: auto;
+	/* overflow: auto; */
 	border-radius: 5px;
 	padding-right: 5px;
 }
